--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,16 +1,18 @@
-.wrapperCard{
-    background-color: rgb(118, 129, 235);
-    width: 320px;
-    height: auto;
-    border-radius: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content:center ;
+.wrapperCard {
     position: relative;
-    -webkit-box-shadow: -16px 17px 19px -3px rgba(0,0,0,0.75);
-    -moz-box-shadow: -16px 17px 19px -3px rgba(0,0,0,0.75);
-    box-shadow: -16px 17px 19px -3px rgba(0,0,0,0.75);
+    --card-height: 260px;
+    --card-width: calc(var(--card-height)/1.27);
+    --card-height2: 150px;
+    --card-width2: calc(var(--card-height2)/1.27);
+    -webkit-font-smoothing: antialiased;
+    background: linear-gradient(180deg,#bfde42 0,#193840);
+    border: none;
+    border-radius: 9px;
+    box-shadow: inset 0 0 2px #acdd26;
+    color: #fff;
+    cursor: pointer;
+    font: 13px/13px HelveticaNeue,Helvetica,Arial,sans-serif;
+    padding: 10px;
 
 }
 
@@ -25,4 +27,3 @@
     border: none;
     background-color: gray;
 }
-
