--- a/Rick_and_Morty/src/App.css
+++ b/Rick_and_Morty/src/App.css
@@ -1,7 +1,7 @@
 body {
     text-align: center;
     
-    background-image: url('C:\Users\Hp\OneDrive\Escritorio\Intregador VITE\Rick_and_Morty\src\Images\background rick & morty 5.jpg');
+    background-image: url('C:\Users\Hp\OneDrive\Escritorio\Intregador VITE\Rick_and_Morty\src\Images\RICK AND MORTY 4K WALLPAPER FOR PC.png');
     background-attachment: fixed;
    background-size: cover;
  
