--- a/Rick_and_Morty/src/components/SearchBar/SearchBar.module.css
+++ b/Rick_and_Morty/src/components/SearchBar/SearchBar.module.css
@@ -2,6 +2,14 @@
     background-color: rgb(255, 255, 255);
     width: 350px;
     border: none;
+    background: linear-gradient(180deg,#bfde42 0,#193840);
+    border: none;
+    border-radius: 9px;
+    box-shadow: inset 0 0 2px #acdd26;
+    color: #fff;
+    cursor: pointer;
+    font: 26px/26px HelveticaNeue,Helvetica,Arial,sans-serif;
+    padding: 5px;
 
 }
 
@@ -15,3 +23,6 @@
     border: none;
     width: 20%;
 }
+
+
+    
