--- a/src/components/About/About.module.css
+++ b/src/components/About/About.module.css
@@ -1,10 +1,13 @@
 .about{
 
-    background-color: #20d810;
-    border-radius: 10px;
-    display: block;
-    text-align: center;
-    justify-content:center ;
-    align-items: center;
-
+    background: linear-gradient(180deg,#bfde42 0,#193840);
+    border: none;
+    border-radius: 9px;
+    box-shadow: inset 0 0 2px #acdd26;
+    color: #fff;
+    cursor: pointer;
+    font: 15px/15px HelveticaNeue,Helvetica,Arial,sans-serif;
+    padding: 10px;
+    
+    
 }
