--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -1,6 +1,23 @@
 .nav{
-    background-color: aqua;
-    display: flex;
-    justify-content: space-around;
-    padding: 10px;
+    background: linear-gradient(180deg,#bfde42 0,#193840);
+    border: none;
+    border-radius: 9px;
+    box-shadow: inset 0 0 2px #acdd26;
+    color: #fff;
+    cursor: pointer;
+    font: 26px/26px HelveticaNeue,Helvetica,Arial,sans-serif;
+    padding: 5px;
+    
+}
+
+.navi{
+    background: linear-gradient(180deg,#bfde42 0,#193840);
+    border: none;
+    border-radius: 9px;
+    box-shadow: inset 0 0 2px #acdd26;
+    color: #fff;
+    cursor: pointer;
+    font: 26px/26px HelveticaNeue,Helvetica,Arial,sans-serif;
+    padding: 15px;
+    
 }
