--- a/Rick_and_Morty/Client/src/components/NavBar/NavBar.module.css
+++ b/Rick_and_Morty/Client/src/components/NavBar/NavBar.module.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: 'Get Schwifty';
+  src: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/3089507/get-schwifty.woff') format('woff');
+}
+
 .navBar {
     display: flex;
     justify-content: space-between;
@@ -8,7 +13,7 @@
     box-shadow: inset 0 0 2px #acdd26;
     color: #fff;
     cursor: pointer;
-    font: 26px/26px HelveticaNeue, Helvetica, Arial, sans-serif;
+    font: 28px/28px 'Get Schwifty';
     padding: 5px 15px; /* Ajusta el espaciado vertical y horizontal */
   }
   
