--- a/Rick_and_Morty/Client/src/App.css
+++ b/Rick_and_Morty/Client/src/App.css
@@ -1,14 +1,14 @@
 body {
-    text-align: center;
-    
-    background-image: url('C:\Users\Hp\OneDrive\Escritorio\Intregador VITE\Rick_and_Morty\Client\src\Images\RICK AND MORTY 4K WALLPAPER FOR PC.webp');
-    background-attachment: fixed;
-   background-size: cover;
- 
- }
- 
+  text-align: center;
+  
+  background-image: url('C:\Users\Hp\OneDrive\Escritorio\Integrador Pruebas\Rick_and_Morty\Client\src\Images\RICK AND MORTY 4K WALLPAPER FOR PC.webp');
+  background-attachment: fixed;
+  background-size: cover;
+
+}
+
 .active {
-  color: #0b5ed7 !important;
-  font-weight: bold;
-  border-bottom: 3px solid #0b5ed7;
+ color: #0b5ed7 !important;
+ font-weight: bold;
+ border-bottom: 3px solid #0b5ed7;
 }
